Fixed Sidebar Navigation: Arrow should point to the right when collapsed (#3)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -137,5 +137,15 @@
 
   @media (min-width: breakpoint.$desktop) {
     display: flex;
+
+    img {
+      transition: transform ease-in-out 300ms;
+    }
+
+    &.isCollapsed {
+      img {
+        transform: rotate(0.5turn);
+      }
+    }
   }
 }
